<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/groupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/_GroupName"
            android:singleLine="true"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/groupPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Group Phone Number"
            android:inputType="phone"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/numbeOfCycles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:hint="Number Of Cycles in LedgerLink"
            android:inputType="phone"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Implementers"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/sp_implemeters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="#1E88E5"
            android:gravity="center"
            android:text="@string/_GroupRepresentativeDetails"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/memberName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:hint="@string/_MemberName"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/memberPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:hint="@string/_MemberPost"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/memberPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:hint="@string/_MemberPhoneNumber"
            android:inputType="phone"
            android:singleLine="true"
            android:textSize="16sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="#1E88E5"
            android:gravity="center"
            android:text="@string/_GroupBankDetails"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/groupAccountNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/_AccountNumber"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="16sp" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
