<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ledgerlink_logo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/_appLogo"
            android:scaleType="centerInside"
            android:src="@drawable/ledgerlink_logo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_username"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/passkey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_passkey"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/square"
            android:gravity="center"
            android:text="@string/_login"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/credentials_recovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/_userInformationRecovery"
            android:textSize="13sp"
            android:textStyle="bold" />
        <!-- Version format {yy}{mm}{dd}{release number }  -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="V15091701"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
